--- a/project_shopify/dbt_project.yml
+++ b/project_shopify/dbt_project.yml
@@ -31,6 +31,15 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   project_shopify:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    staging:
+      +schema: staging_data
+      tables:
+        +materialized: table
+      views:
+        +materialized: view
+    fact_dim:
+      +schema: dim_fact
+      tables:
+        +materialized: table
+      views:
+        +materialized: view
